TODO
* move file io handle into libvmdk_file

API
* add functions to access storage media data

library
* implement grain cache
* fill offset table
* create handle to read a set of vmdk files
* add support for VMDK markers

File format
* complete COWD support
* addd support for descriptor file

Deployment:
* update manuals
* create debian package files
* update macosx package files
* update codegear files
* check msvcpp files

20100314
* string fix in vmdkinfo

20100221
* updated common, liberror, libuna, libbfio
* libvmdk 2010 update
* worked on byte stream update
* worked on libnotify update

20091004
* updated acinclude
* updated libuna, libbfio, common, libsystem, liberror, libnotify

20090913
* worked on VMDK support

20090912
* initial version based on liblnk
* worked on implementing vmdk and cowd sparse data files
